renderizing the home and the menu

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,10 @@
 <section>
-    <h1>{{ name }}</h1>
+    <div style="position: absolute; bottom: 40%; left:40%; margin: 3em; color: #fefefe; font-family: 'Lexend Deca', sans-serif; font-size: 2.7em"
+        data-aos="zoom-in-up" data-aos-delay="100" data-aos-easing="ease-in-sine" data-aos-duration="750">
+        <h1><b>LIèGE </b> <i>With </i> <u>Buddies </u> </h1>
+    </div>
+    <div style="position: absolute; bottom: 5%; left:10%; color: #fefefe; font-family: 'Lexend Deca', sans-serif; font-size: 1.5em"
+         data-aos="fade-down" data-aos-delay="300" data-aos-easing="ease-in-sine" data-aos-duration="500">
+    <h1 style="text-shadow: 2px 2px 5px #343434;"><b>v</b></h1>
+</div>
 </section>
