--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,13 +7,11 @@ header {
 }
 
 header ul {
-    position: absolute;
-    left: 38%;
     bottom: 15%;
 }
 
 header ul li{
-    font-family: 'Lexend Deca';
+    font-family: 'Zilla Slab', serif;
     font-size: 1.5em;
     color: #eaeaea;
 }
