add parallax effect

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <app-home name="Home"></app-home>
 <app-menu></app-menu>
-<app-dummy name="Dummy 1"></app-dummy>
-<app-dummy name="Dummy 2"></app-dummy>
+<div class="content">
+    <app-dummy name="Dummy 1"></app-dummy>
+    <app-dummy name="Dummy 2"></app-dummy>
+</div>
