--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,9 @@
-<section>
-    <section class="foreground">
-        <div style="position: absolute; bottom: 40%; left:40%; margin: 3em; color: #fefefe; font-family: 'Zilla Slab', serif; font-size: 2.7em"
-            data-aos="zoom-in-up" data-aos-delay="100" data-aos-easing="ease-in-sine" data-aos-duration="750">
+<div class="main-container">
+    <div class="layer layer1" data-type="parallax" data-depth="0.5"></div>
+    <div class="layer layer3" data-type="parallax" data-depth="0.3" data-type="parallax" data-depth="0.1">
+        <div class="title">
             <h1><b>LIèGE </b> <i>With </i> <u>Buddies </u> </h1>
         </div>
-    </section>
-</section>
+    </div>
+    <div class="layer layer2" data-type="parallax" data-depth="0.7"></div>
+</div>
