--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -4,7 +4,22 @@ $parallax-perspective: 8px;
   @return ($parallax-perspective  -  $z-distance) / $parallax-perspective;
 }
 
-section {
+.main-container {
+  height: 100vh;
+  overflow: hidden;
+  position: relative;
+}
+
+.layer {
+  background-position: bottom center;
+  background-size: auto;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  z-index: -1;
+}
+.layer1 {
     transform: translateZ(0px);
     background: url('../../assets/home_bg.jpg');
     background-size: cover;
@@ -12,10 +27,25 @@ section {
     width:100%;
 }
 
-.foreground {
+.layer2 {
     background: url('../../assets/foreground_home_bg.png');
     background-size: cover;
     height:100vh;
     width:100%;
     transform: translateZ(3px) scale(1);
+}
+
+.layer3 {
+    margin: 3em; 
+    color: #fefefe;
+    font-family: 'Zilla Slab', serif;
+    font-size: 2.7em;
+    height:100vh;
+    width:100%;
+}
+
+.title {
+  position: absolute;
+  right: 0;
+  left: 0;
 }
