--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
     <div class="layer layer1" data-type="parallax" data-depth="0.5"></div>
     <div class="layer layer3" data-type="parallax" data-depth="0.3" data-type="parallax" data-depth="0.1">
         <div class="title">
-            <h1><b>LIèGE </b> <i>With </i> <u>Buddies </u> </h1>
+            <app-title></app-title>
         </div>
     </div>
     <div class="layer layer2" data-type="parallax" data-depth="0.7"></div>
