--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,14 @@
 <div class="main-container">
-    <div class="layer layer1" data-type="parallax" data-depth="0.5"></div>
-    <div class="layer layer3" data-type="parallax" data-depth="0.3" data-type="parallax" data-depth="0.1">
-        <div class="title">
-            <app-title></app-title>
+    <div class="layer layer1" data-type="parallax" data-depth="0.3"></div>
+    <div class="layer layer2" data-type="parallax" data-depth="0.5"></div>
+    <div class="layer layer3" data-type="parallax" data-depth="0.7">
+        <div class=".over-title">
+            <h1>Visit</h1>
         </div>
     </div>
-    <div class="layer layer2" data-type="parallax" data-depth="0.7"></div>
+    <div class="layer layer4" data-type="parallax" data-depth="0.7">
+        <div class="sub-title">
+            <h1>With <u>NICE</u> <i> buddies</i></h1>
+        </div>
+    </div>
 </div>
