--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,14 +1,21 @@
 <div class="main-container">
     <div class="layer layer1" data-type="parallax" data-depth="0.3"></div>
-    <div class="layer layer2" data-type="parallax" data-depth="0.5"></div>
-    <div class="layer layer3" data-type="parallax" data-depth="0.7">
-        <div class=".over-title">
-            <h1>Visit</h1>
+    <div class="layer layer4" data-type="parallax" data-depth="0.4">
+        <div class="over-title">
+            <h1>Discover</h1>
         </div>
     </div>
-    <div class="layer layer4" data-type="parallax" data-depth="0.7">
-        <div class="sub-title">
-            <h1>With <u>NICE</u> <i> buddies</i></h1>
+    <div class="layer layer4" data-type="parallax" data-depth="0.6">
+        <div class="middle-title">
+            <h1>Liege</h1>
         </div>
+    </div>
+    <div class="layer layer4" data-type="parallax" data-depth="0.8">
+        <div class="sub-title">
+            <h1>With nice buddies</h1>
+        </div>
+    </div>
+    <div class="arrow_wrapper">
+        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/95802/arrow.svg" class="down_arrow2a" data-type="parallax" data-depth="0.9">
     </div>
 </div>
