--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,9 +11,9 @@ header ul {
 }
 
 header ul li{
-    font-family: 'Zilla Slab', serif;
+    font-family: 'Lexend Deca', sans-serif;
     font-size: 1.5em;
-    color: #eaeaea;
+    color: transparent,
 }
 
 header {
@@ -35,7 +35,7 @@ html:not([data-scroll='0']) {
     header {
         position: fixed;
         top: 0;
-        background-color: #fff;
+        background-color: white;
         box-shadow: 0 0 .5em rgba(0, 0, 0, .5);
     }
 
