--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,5 @@
 .content {
-    background: #FFF9E5;
+    padding: 1em;
+    background: rgba(253,253,247);
+    background: linear-gradient(180deg, rgba(2,0,36,0) 1%, rgba(253,253,247) 5%);
 }
