--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,19 +5,23 @@
             <h1>Discover</h1>
         </div>
     </div>
-    <div class="layer layer4" data-type="parallax" data-depth="0.8">
-        <div class="sub-title">
-            <h1>With nice buddies</h1>
-        </div>
-    </div>
-
     <div class="layer layer4" data-type="parallax" data-depth="0.6">
         <div class="middle-title">
             <h1>Liege</h1>
         </div>
     </div>
-    
-    <div class="arrow_wrapper">
-        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/95802/arrow.svg" class="down_arrow2a" data-type="parallax" data-depth="0.9">
+    <div class="layer layer4" data-type="parallax" data-depth="0.8">
+        <div class="sub-title">
+            <h1>With nice buddies</h1>
+        </div>
+    </div>
+    <div class="layer layerArrow" data-type="parallax" data-depth="0.8">
+        <div class="arrow">
+            <svg viewBox="0 0 24 24" width="100%" height="100%" stroke="White" stroke-width="2" fill="none"
+                stroke-linecap="round" stroke-linejoin="round">
+                <polyline points="7 13 12 18 17 13"></polyline>
+                <polyline points="7 6 12 11 17 6"></polyline>
+            </svg>
+        </div>
     </div>
 </div>
