Last change of the home (hope there is no bug - expect this is un-responsive)

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,24 +1,26 @@
 <div class="main-container">
     <div class="layer layer1" data-type="parallax" data-depth="0.3"></div>
-    <div class="layer layer4" data-type="parallax" data-depth="0.4">
-        <div class="over-title">
-            <h1>Discover</h1>
+    <div class="layer layer2">
+        <div class="square">
+            <svg width="100%" height="100%" data-type="parallax" data-depth="0.65">
+                <rect width="100%" height="100%" style="fill:transparent;stroke-width:20;stroke:#ffffffaa" />
+            </svg>
+            <div class="layer layer4">
+                <div class="over-title">
+                    <p data-type="parallax" data-depth="0.8">
+                        <i data-aos="fade-up" data-aos-duration="1000">Discover </i>
+                        <b data-aos="fade-up" data-aos-duration="1000">Liege </b>
+                        <u data-aos="fade-up" data-aos-duration="1000">With nice buddies</u></p>
+                </div>
+            </div>
         </div>
     </div>
-    <div class="layer layer4" data-type="parallax" data-depth="0.6">
-        <div class="middle-title">
-            <h1>Liege</h1>
-        </div>
-    </div>
-    <div class="layer layer4" data-type="parallax" data-depth="0.8">
-        <div class="sub-title">
-            <h1>With nice buddies</h1>
-        </div>
-    </div>
+    
     <div class="layer layerArrow" data-type="parallax" data-depth="0.8">
         <div class="arrow">
             <svg viewBox="0 0 24 24" width="100%" height="100%" stroke="White" stroke-width="2" fill="none"
-                stroke-linecap="round" stroke-linejoin="round">
+                stroke-linecap="round" stroke-linejoin="round"
+                data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
                 <polyline points="7 13 12 18 17 13"></polyline>
                 <polyline points="7 6 12 11 17 6"></polyline>
             </svg>
