start the rest of the page

--- a/src/app/dummy/dummy.component.html
+++ b/src/app/dummy/dummy.component.html
@@ -1,99 +1,101 @@
-<h1>{{ name }}</h1>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus semper augue at tincidunt consectetur. Aliquam sed
-    molestie odio, nec tincidunt nisl. Vivamus tempus felis vel tellus consequat, at gravida enim accumsan. Sed eu
-    blandit libero, sed sollicitudin augue. Nunc dictum scelerisque ligula et tempor. Proin libero ante, ultrices quis
-    libero tempor, sagittis iaculis odio. Proin suscipit diam maximus auctor malesuada. Sed fringilla tortor massa, vel
-    condimentum lacus rutrum non. Mauris hendrerit, enim nec vulputate eleifend, ligula ex ornare arcu, id imperdiet
-    diam erat vehicula arcu. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;
-    Aenean dignissim elit et turpis auctor pretium.
-
-    Fusce malesuada odio in erat varius fermentum. Integer nulla mi, facilisis ut ultricies sit amet, hendrerit ac
-    magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Maecenas sit amet dapibus eros, nec sodales
-    dui. Aenean a nibh quis ligula vestibulum imperdiet vitae sed mauris. Nullam quis scelerisque ligula, eget sodales
-    turpis. Morbi eget posuere orci. Duis vulputate ultricies venenatis. Duis vitae arcu at mauris condimentum placerat.
-    Fusce mauris arcu, lobortis id hendrerit id, finibus a quam. Etiam vitae leo ante. Nunc placerat blandit quam, eget
-    laoreet erat facilisis eget.
-
-    Maecenas nec vehicula augue. Morbi ultrices interdum eleifend. Duis ex augue, pretium lobortis accumsan id, semper
-    vitae ante. Nam mollis ipsum nunc, id malesuada dui laoreet vitae. Fusce ac ipsum elit. Duis auctor et lorem in
-    dignissim. Mauris sed mollis risus, egestas porttitor purus. Phasellus purus massa, molestie sed sapien dignissim,
-    pretium pretium metus. Nunc sodales massa magna, non maximus mauris pretium at. Duis ultrices interdum fermentum.
-
-    Etiam iaculis eros neque, nec bibendum purus interdum in. Nunc in mauris condimentum, bibendum sem eget, sagittis
-    mauris. Phasellus sed nisl nibh. Nunc quam lorem, accumsan non mi at, pulvinar molestie nibh. Nulla facilisi. Donec
-    pulvinar tristique quam, id fringilla ligula molestie ut. Proin id molestie nunc, sit amet pellentesque lorem.
-    Vivamus sollicitudin massa eu urna faucibus cursus. Integer convallis iaculis ornare. Fusce suscipit in tortor non
-    placerat. Cras non neque euismod, rutrum ante sed, cursus odio. Curabitur ullamcorper, justo ut pretium aliquam,
-    lectus erat finibus dui, a commodo lectus ipsum lobortis justo. Etiam finibus aliquet ipsum eu laoreet. Curabitur
-    tristique et dui et interdum. Duis ullamcorper diam magna, nec aliquam risus scelerisque eget.
-
-    Nullam enim ex, viverra eget velit quis, luctus hendrerit diam. Phasellus ac luctus dui. In fringilla venenatis
-    neque. Vivamus vehicula porttitor augue eget gravida. In lobortis purus non convallis posuere. Praesent egestas
-    lectus at elit tempus, tempor ultrices leo vulputate. Duis id dolor dolor. Ut quis nunc vitae metus dignissim
-    blandit quis non tellus. Aenean nec metus condimentum, sagittis justo ac, efficitur neque. Sed vitae est ex.</p>
-
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus semper augue at tincidunt consectetur. Aliquam sed
-    molestie odio, nec tincidunt nisl. Vivamus tempus felis vel tellus consequat, at gravida enim accumsan. Sed eu
-    blandit libero, sed sollicitudin augue. Nunc dictum scelerisque ligula et tempor. Proin libero ante, ultrices quis
-    libero tempor, sagittis iaculis odio. Proin suscipit diam maximus auctor malesuada. Sed fringilla tortor massa, vel
-    condimentum lacus rutrum non. Mauris hendrerit, enim nec vulputate eleifend, ligula ex ornare arcu, id imperdiet
-    diam erat vehicula arcu. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;
-    Aenean dignissim elit et turpis auctor pretium.
-
-    Fusce malesuada odio in erat varius fermentum. Integer nulla mi, facilisis ut ultricies sit amet, hendrerit ac
-    magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Maecenas sit amet dapibus eros, nec sodales
-    dui. Aenean a nibh quis ligula vestibulum imperdiet vitae sed mauris. Nullam quis scelerisque ligula, eget sodales
-    turpis. Morbi eget posuere orci. Duis vulputate ultricies venenatis. Duis vitae arcu at mauris condimentum placerat.
-    Fusce mauris arcu, lobortis id hendrerit id, finibus a quam. Etiam vitae leo ante. Nunc placerat blandit quam, eget
-    laoreet erat facilisis eget.
-
-    Maecenas nec vehicula augue. Morbi ultrices interdum eleifend. Duis ex augue, pretium lobortis accumsan id, semper
-    vitae ante. Nam mollis ipsum nunc, id malesuada dui laoreet vitae. Fusce ac ipsum elit. Duis auctor et lorem in
-    dignissim. Mauris sed mollis risus, egestas porttitor purus. Phasellus purus massa, molestie sed sapien dignissim,
-    pretium pretium metus. Nunc sodales massa magna, non maximus mauris pretium at. Duis ultrices interdum fermentum.
-
-    Etiam iaculis eros neque, nec bibendum purus interdum in. Nunc in mauris condimentum, bibendum sem eget, sagittis
-    mauris. Phasellus sed nisl nibh. Nunc quam lorem, accumsan non mi at, pulvinar molestie nibh. Nulla facilisi. Donec
-    pulvinar tristique quam, id fringilla ligula molestie ut. Proin id molestie nunc, sit amet pellentesque lorem.
-    Vivamus sollicitudin massa eu urna faucibus cursus. Integer convallis iaculis ornare. Fusce suscipit in tortor non
-    placerat. Cras non neque euismod, rutrum ante sed, cursus odio. Curabitur ullamcorper, justo ut pretium aliquam,
-    lectus erat finibus dui, a commodo lectus ipsum lobortis justo. Etiam finibus aliquet ipsum eu laoreet. Curabitur
-    tristique et dui et interdum. Duis ullamcorper diam magna, nec aliquam risus scelerisque eget.
-
-    Nullam enim ex, viverra eget velit quis, luctus hendrerit diam. Phasellus ac luctus dui. In fringilla venenatis
-    neque. Vivamus vehicula porttitor augue eget gravida. In lobortis purus non convallis posuere. Praesent egestas
-    lectus at elit tempus, tempor ultrices leo vulputate. Duis id dolor dolor. Ut quis nunc vitae metus dignissim
-    blandit quis non tellus. Aenean nec metus condimentum, sagittis justo ac, efficitur neque. Sed vitae est ex.</p>
-
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus semper augue at tincidunt consectetur. Aliquam sed
-    molestie odio, nec tincidunt nisl. Vivamus tempus felis vel tellus consequat, at gravida enim accumsan. Sed eu
-    blandit libero, sed sollicitudin augue. Nunc dictum scelerisque ligula et tempor. Proin libero ante, ultrices quis
-    libero tempor, sagittis iaculis odio. Proin suscipit diam maximus auctor malesuada. Sed fringilla tortor massa, vel
-    condimentum lacus rutrum non. Mauris hendrerit, enim nec vulputate eleifend, ligula ex ornare arcu, id imperdiet
-    diam erat vehicula arcu. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;
-    Aenean dignissim elit et turpis auctor pretium.
-
-    Fusce malesuada odio in erat varius fermentum. Integer nulla mi, facilisis ut ultricies sit amet, hendrerit ac
-    magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Maecenas sit amet dapibus eros, nec sodales
-    dui. Aenean a nibh quis ligula vestibulum imperdiet vitae sed mauris. Nullam quis scelerisque ligula, eget sodales
-    turpis. Morbi eget posuere orci. Duis vulputate ultricies venenatis. Duis vitae arcu at mauris condimentum placerat.
-    Fusce mauris arcu, lobortis id hendrerit id, finibus a quam. Etiam vitae leo ante. Nunc placerat blandit quam, eget
-    laoreet erat facilisis eget.
-
-    Maecenas nec vehicula augue. Morbi ultrices interdum eleifend. Duis ex augue, pretium lobortis accumsan id, semper
-    vitae ante. Nam mollis ipsum nunc, id malesuada dui laoreet vitae. Fusce ac ipsum elit. Duis auctor et lorem in
-    dignissim. Mauris sed mollis risus, egestas porttitor purus. Phasellus purus massa, molestie sed sapien dignissim,
-    pretium pretium metus. Nunc sodales massa magna, non maximus mauris pretium at. Duis ultrices interdum fermentum.
-
-    Etiam iaculis eros neque, nec bibendum purus interdum in. Nunc in mauris condimentum, bibendum sem eget, sagittis
-    mauris. Phasellus sed nisl nibh. Nunc quam lorem, accumsan non mi at, pulvinar molestie nibh. Nulla facilisi. Donec
-    pulvinar tristique quam, id fringilla ligula molestie ut. Proin id molestie nunc, sit amet pellentesque lorem.
-    Vivamus sollicitudin massa eu urna faucibus cursus. Integer convallis iaculis ornare. Fusce suscipit in tortor non
-    placerat. Cras non neque euismod, rutrum ante sed, cursus odio. Curabitur ullamcorper, justo ut pretium aliquam,
-    lectus erat finibus dui, a commodo lectus ipsum lobortis justo. Etiam finibus aliquet ipsum eu laoreet. Curabitur
-    tristique et dui et interdum. Duis ullamcorper diam magna, nec aliquam risus scelerisque eget.
-
-    Nullam enim ex, viverra eget velit quis, luctus hendrerit diam. Phasellus ac luctus dui. In fringilla venenatis
-    neque. Vivamus vehicula porttitor augue eget gravida. In lobortis purus non convallis posuere. Praesent egestas
-    lectus at elit tempus, tempor ultrices leo vulputate. Duis id dolor dolor. Ut quis nunc vitae metus dignissim
-    blandit quis non tellus. Aenean nec metus condimentum, sagittis justo ac, efficitur neque. Sed vitae est ex.</p>
+<div [id]="this.htmlId" class="main-container" data-type="parallax" data-depth="0.3">
+    <h1>{{ name }}</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus semper augue at tincidunt consectetur. Aliquam sed
+        molestie odio, nec tincidunt nisl. Vivamus tempus felis vel tellus consequat, at gravida enim accumsan. Sed eu
+        blandit libero, sed sollicitudin augue. Nunc dictum scelerisque ligula et tempor. Proin libero ante, ultrices quis
+        libero tempor, sagittis iaculis odio. Proin suscipit diam maximus auctor malesuada. Sed fringilla tortor massa, vel
+        condimentum lacus rutrum non. Mauris hendrerit, enim nec vulputate eleifend, ligula ex ornare arcu, id imperdiet
+        diam erat vehicula arcu. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;
+        Aenean dignissim elit et turpis auctor pretium.
+    
+        Fusce malesuada odio in erat varius fermentum. Integer nulla mi, facilisis ut ultricies sit amet, hendrerit ac
+        magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Maecenas sit amet dapibus eros, nec sodales
+        dui. Aenean a nibh quis ligula vestibulum imperdiet vitae sed mauris. Nullam quis scelerisque ligula, eget sodales
+        turpis. Morbi eget posuere orci. Duis vulputate ultricies venenatis. Duis vitae arcu at mauris condimentum placerat.
+        Fusce mauris arcu, lobortis id hendrerit id, finibus a quam. Etiam vitae leo ante. Nunc placerat blandit quam, eget
+        laoreet erat facilisis eget.
+    
+        Maecenas nec vehicula augue. Morbi ultrices interdum eleifend. Duis ex augue, pretium lobortis accumsan id, semper
+        vitae ante. Nam mollis ipsum nunc, id malesuada dui laoreet vitae. Fusce ac ipsum elit. Duis auctor et lorem in
+        dignissim. Mauris sed mollis risus, egestas porttitor purus. Phasellus purus massa, molestie sed sapien dignissim,
+        pretium pretium metus. Nunc sodales massa magna, non maximus mauris pretium at. Duis ultrices interdum fermentum.
+    
+        Etiam iaculis eros neque, nec bibendum purus interdum in. Nunc in mauris condimentum, bibendum sem eget, sagittis
+        mauris. Phasellus sed nisl nibh. Nunc quam lorem, accumsan non mi at, pulvinar molestie nibh. Nulla facilisi. Donec
+        pulvinar tristique quam, id fringilla ligula molestie ut. Proin id molestie nunc, sit amet pellentesque lorem.
+        Vivamus sollicitudin massa eu urna faucibus cursus. Integer convallis iaculis ornare. Fusce suscipit in tortor non
+        placerat. Cras non neque euismod, rutrum ante sed, cursus odio. Curabitur ullamcorper, justo ut pretium aliquam,
+        lectus erat finibus dui, a commodo lectus ipsum lobortis justo. Etiam finibus aliquet ipsum eu laoreet. Curabitur
+        tristique et dui et interdum. Duis ullamcorper diam magna, nec aliquam risus scelerisque eget.
+    
+        Nullam enim ex, viverra eget velit quis, luctus hendrerit diam. Phasellus ac luctus dui. In fringilla venenatis
+        neque. Vivamus vehicula porttitor augue eget gravida. In lobortis purus non convallis posuere. Praesent egestas
+        lectus at elit tempus, tempor ultrices leo vulputate. Duis id dolor dolor. Ut quis nunc vitae metus dignissim
+        blandit quis non tellus. Aenean nec metus condimentum, sagittis justo ac, efficitur neque. Sed vitae est ex.</p>
+    
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus semper augue at tincidunt consectetur. Aliquam sed
+        molestie odio, nec tincidunt nisl. Vivamus tempus felis vel tellus consequat, at gravida enim accumsan. Sed eu
+        blandit libero, sed sollicitudin augue. Nunc dictum scelerisque ligula et tempor. Proin libero ante, ultrices quis
+        libero tempor, sagittis iaculis odio. Proin suscipit diam maximus auctor malesuada. Sed fringilla tortor massa, vel
+        condimentum lacus rutrum non. Mauris hendrerit, enim nec vulputate eleifend, ligula ex ornare arcu, id imperdiet
+        diam erat vehicula arcu. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;
+        Aenean dignissim elit et turpis auctor pretium.
+    
+        Fusce malesuada odio in erat varius fermentum. Integer nulla mi, facilisis ut ultricies sit amet, hendrerit ac
+        magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Maecenas sit amet dapibus eros, nec sodales
+        dui. Aenean a nibh quis ligula vestibulum imperdiet vitae sed mauris. Nullam quis scelerisque ligula, eget sodales
+        turpis. Morbi eget posuere orci. Duis vulputate ultricies venenatis. Duis vitae arcu at mauris condimentum placerat.
+        Fusce mauris arcu, lobortis id hendrerit id, finibus a quam. Etiam vitae leo ante. Nunc placerat blandit quam, eget
+        laoreet erat facilisis eget.
+    
+        Maecenas nec vehicula augue. Morbi ultrices interdum eleifend. Duis ex augue, pretium lobortis accumsan id, semper
+        vitae ante. Nam mollis ipsum nunc, id malesuada dui laoreet vitae. Fusce ac ipsum elit. Duis auctor et lorem in
+        dignissim. Mauris sed mollis risus, egestas porttitor purus. Phasellus purus massa, molestie sed sapien dignissim,
+        pretium pretium metus. Nunc sodales massa magna, non maximus mauris pretium at. Duis ultrices interdum fermentum.
+    
+        Etiam iaculis eros neque, nec bibendum purus interdum in. Nunc in mauris condimentum, bibendum sem eget, sagittis
+        mauris. Phasellus sed nisl nibh. Nunc quam lorem, accumsan non mi at, pulvinar molestie nibh. Nulla facilisi. Donec
+        pulvinar tristique quam, id fringilla ligula molestie ut. Proin id molestie nunc, sit amet pellentesque lorem.
+        Vivamus sollicitudin massa eu urna faucibus cursus. Integer convallis iaculis ornare. Fusce suscipit in tortor non
+        placerat. Cras non neque euismod, rutrum ante sed, cursus odio. Curabitur ullamcorper, justo ut pretium aliquam,
+        lectus erat finibus dui, a commodo lectus ipsum lobortis justo. Etiam finibus aliquet ipsum eu laoreet. Curabitur
+        tristique et dui et interdum. Duis ullamcorper diam magna, nec aliquam risus scelerisque eget.
+    
+        Nullam enim ex, viverra eget velit quis, luctus hendrerit diam. Phasellus ac luctus dui. In fringilla venenatis
+        neque. Vivamus vehicula porttitor augue eget gravida. In lobortis purus non convallis posuere. Praesent egestas
+        lectus at elit tempus, tempor ultrices leo vulputate. Duis id dolor dolor. Ut quis nunc vitae metus dignissim
+        blandit quis non tellus. Aenean nec metus condimentum, sagittis justo ac, efficitur neque. Sed vitae est ex.</p>
+    
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus semper augue at tincidunt consectetur. Aliquam sed
+        molestie odio, nec tincidunt nisl. Vivamus tempus felis vel tellus consequat, at gravida enim accumsan. Sed eu
+        blandit libero, sed sollicitudin augue. Nunc dictum scelerisque ligula et tempor. Proin libero ante, ultrices quis
+        libero tempor, sagittis iaculis odio. Proin suscipit diam maximus auctor malesuada. Sed fringilla tortor massa, vel
+        condimentum lacus rutrum non. Mauris hendrerit, enim nec vulputate eleifend, ligula ex ornare arcu, id imperdiet
+        diam erat vehicula arcu. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;
+        Aenean dignissim elit et turpis auctor pretium.
+    
+        Fusce malesuada odio in erat varius fermentum. Integer nulla mi, facilisis ut ultricies sit amet, hendrerit ac
+        magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Maecenas sit amet dapibus eros, nec sodales
+        dui. Aenean a nibh quis ligula vestibulum imperdiet vitae sed mauris. Nullam quis scelerisque ligula, eget sodales
+        turpis. Morbi eget posuere orci. Duis vulputate ultricies venenatis. Duis vitae arcu at mauris condimentum placerat.
+        Fusce mauris arcu, lobortis id hendrerit id, finibus a quam. Etiam vitae leo ante. Nunc placerat blandit quam, eget
+        laoreet erat facilisis eget.
+    
+        Maecenas nec vehicula augue. Morbi ultrices interdum eleifend. Duis ex augue, pretium lobortis accumsan id, semper
+        vitae ante. Nam mollis ipsum nunc, id malesuada dui laoreet vitae. Fusce ac ipsum elit. Duis auctor et lorem in
+        dignissim. Mauris sed mollis risus, egestas porttitor purus. Phasellus purus massa, molestie sed sapien dignissim,
+        pretium pretium metus. Nunc sodales massa magna, non maximus mauris pretium at. Duis ultrices interdum fermentum.
+    
+        Etiam iaculis eros neque, nec bibendum purus interdum in. Nunc in mauris condimentum, bibendum sem eget, sagittis
+        mauris. Phasellus sed nisl nibh. Nunc quam lorem, accumsan non mi at, pulvinar molestie nibh. Nulla facilisi. Donec
+        pulvinar tristique quam, id fringilla ligula molestie ut. Proin id molestie nunc, sit amet pellentesque lorem.
+        Vivamus sollicitudin massa eu urna faucibus cursus. Integer convallis iaculis ornare. Fusce suscipit in tortor non
+        placerat. Cras non neque euismod, rutrum ante sed, cursus odio. Curabitur ullamcorper, justo ut pretium aliquam,
+        lectus erat finibus dui, a commodo lectus ipsum lobortis justo. Etiam finibus aliquet ipsum eu laoreet. Curabitur
+        tristique et dui et interdum. Duis ullamcorper diam magna, nec aliquam risus scelerisque eget.
+    
+        Nullam enim ex, viverra eget velit quis, luctus hendrerit diam. Phasellus ac luctus dui. In fringilla venenatis
+        neque. Vivamus vehicula porttitor augue eget gravida. In lobortis purus non convallis posuere. Praesent egestas
+        lectus at elit tempus, tempor ultrices leo vulputate. Duis id dolor dolor. Ut quis nunc vitae metus dignissim
+        blandit quis non tellus. Aenean nec metus condimentum, sagittis justo ac, efficitur neque. Sed vitae est ex.</p>
+</div>
