--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <app-home name="Home"></app-home>
-<app-menu></app-menu>
 <div class="content">
+    <app-citation></app-citation>
     <app-dummy name="Dummy 1"></app-dummy>
     <app-dummy name="Dummy 2"></app-dummy>
 </div>
+<app-menu></app-menu>
