--- a/src/app/citation/citation.component.scss
+++ b/src/app/citation/citation.component.scss
@@ -1,10 +1,14 @@
 .main-container {
-    height: 100vh;
-    width: 100%;
+    height: 120vh;
     overflow: hidden;
     position: relative;
     text-align: center;
     color: #686868;
     font-family: 'Lexend Deca', sans-serif;
-    background: #a3cfb9
+    background: #cfa3a3
+}
+
+.citation{
+    position: relative;
+    bottom: 0;
 }
