--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="main-container">
+<div class="main-container" [id]="this.htmlId">
     <div class="layer layer1" data-type="parallax" data-depth="0.3"></div>
     <div class="layer layer2">
         <div class="square">
