--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -15,12 +15,12 @@
             </div>
         </div>
     </div>
-    
+
     <div class="layer layerArrow" data-type="parallax" data-depth="0.8">
         <div class="arrow">
-            <svg viewBox="0 0 24 24" width="100%" height="100%" stroke="White" stroke-width="2" fill="none"
-                stroke-linecap="round" stroke-linejoin="round"
-                data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
+            <svg viewBox="0 0 24 24" width="100%" height="100%" stroke="#ffffffaa" stroke-width="2" fill="none"
+                stroke-linecap="round" stroke-linejoin="round" data-aos="fade-up" data-aos-duration="1000"
+                data-aos-delay="200">
                 <polyline points="7 13 12 18 17 13"></polyline>
                 <polyline points="7 6 12 11 17 6"></polyline>
             </svg>
