--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,6 +5,92 @@
             <svg width="100%" height="100%" data-type="parallax" data-depth="0.65">
                 <rect width="100%" height="100%" style="fill:transparent;stroke-width:20;stroke:#ffffffaa" />
             </svg>
+            <div class="layer">
+                <div style="position: relative;" data-aos="fade-up" data-aos-duration="1000">
+                    <div class="logo layer2">
+                        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"
+                            preserveAspectRatio="xMidYMid meet" viewBox="0 0 640 640" width="25vh" height="25vh"
+                            data-type="parallax" data-depth="0.7">
+                            <defs>
+                                <path d="" id="bOA0cQDR4" />
+                                <path d="" id="avwTnKI4A" />
+                                <path d="M520.09 0C521.64 39.67 508.62 92.17 481 157.5" id="a19Ygbdnbm" />
+                                <path d="M403.18 640C361.87 558.33 387.81 397.49 481 157.5" id="dkdMNKY3" />
+                                <path d="M242.82 640C284.13 558.33 258.19 397.49 165 157.5" id="bnKaPLJVh" />
+                                <path d="M125.91 0C124.36 39.67 137.38 92.17 165 157.5" id="bl4MlPuMB" />
+                                <path d="M214.5 157.5L165 157.5" id="c2POVI8tHs" />
+                                <path d="M299.5 157.5L481 157.5" id="c5Wmmz0BR" />
+                                <path d="M516 11L125.79 11" id="b2430WQ9J" />
+                                <path d="M398 633L244 633" id="euzGLzATe" />
+                            </defs>
+                            <g>
+                                <g>
+                                    <g>
+                                        <g>
+                                            <use xlink:href="#bOA0cQDR4" opacity="1" fill-opacity="0" stroke="#fff"
+                                                stroke-width="1" stroke-opacity="1" />
+                                        </g>
+                                    </g>
+                                    <g>
+                                        <g>
+                                            <use xlink:href="#avwTnKI4A" opacity="1" fill-opacity="0" stroke="#fff"
+                                                stroke-width="1" stroke-opacity="1" />
+                                        </g>
+                                    </g>
+                                    <g>
+                                        <g>
+                                            <use xlink:href="#a19Ygbdnbm" opacity="1" fill-opacity="0" stroke="#fff"
+                                                stroke-width="20" stroke-opacity="1" />
+                                        </g>
+                                    </g>
+                                    <g>
+                                        <g>
+                                            <use xlink:href="#dkdMNKY3" opacity="1" fill-opacity="0" stroke="#fff"
+                                                stroke-width="20" stroke-opacity="1" />
+                                        </g>
+                                    </g>
+                                    <g>
+                                        <g>
+                                            <use xlink:href="#bnKaPLJVh" opacity="1" fill-opacity="0" stroke="#fff"
+                                                stroke-width="20" stroke-opacity="1" />
+                                        </g>
+                                    </g>
+                                    <g>
+                                        <g>
+                                            <use xlink:href="#bl4MlPuMB" opacity="1" fill-opacity="0" stroke="#fff"
+                                                stroke-width="20" stroke-opacity="1" />
+                                        </g>
+                                    </g>
+                                    <g>
+                                        <g>
+                                            <use xlink:href="#c2POVI8tHs" opacity="1" fill-opacity="0" stroke="#fff"
+                                                stroke-width="30" stroke-opacity="1" />
+                                        </g>
+                                    </g>
+                                    <g>
+                                        <g>
+                                            <use xlink:href="#c5Wmmz0BR" opacity="1" fill-opacity="0" stroke="#fff"
+                                                stroke-width="30" stroke-opacity="1" />
+                                        </g>
+                                    </g>
+                                    <g>
+                                        <g>
+                                            <use xlink:href="#b2430WQ9J" opacity="1" fill-opacity="0" stroke="#fff"
+                                                stroke-width="22" stroke-opacity="1" />
+                                        </g>
+                                    </g>
+                                    <g>
+                                        <g>
+                                            <use xlink:href="#euzGLzATe" opacity="1" fill-opacity="0" stroke="#fff"
+                                                stroke-width="27" stroke-opacity="1" />
+                                        </g>
+                                    </g>
+                                </g>
+                            </g>
+                        </svg>
+                    </div>
+                </div>
+            </div>
             <div class="layer layer4">
                 <div class="over-title">
                     <p data-type="parallax" data-depth="0.8">
