--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -30,14 +30,21 @@
   height: 100vh;
 }
 
+.logo {
+  position: fixed;
+  bottom: 50%;
+  right: 50%;
+  transform: translate(65%, 60%);
+}
+
 .over-title{ 
-  width: 160%;
+  width: 165%;
   color: white;
   font-family: 'Lexend Deca', sans-serif;
   text-shadow: 2px 2px 6px #313131;
   font-size: 3em;
   position: fixed;
-  bottom: 20%;
+  bottom: 15%;
   right: 50%;
   transform: translate(60%, 50%);
 }
