--- a/src/app/citation/citation.component.scss
+++ b/src/app/citation/citation.component.scss
@@ -5,7 +5,7 @@
     text-align: center;
     color: #686868;
     font-family: 'Lexend Deca', sans-serif;
-    background: #cfa3a3
+    background: #e4e3e3
 }
 
 .citation{
