--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,7 +6,7 @@
                 <rect width="100%" height="100%" style="fill:transparent;stroke-width:20;stroke:#ffffffaa" />
             </svg>
             <div class="layer">
-                <div style="position: relative;" data-aos="fade-up" data-aos-duration="1000">
+                <div style="position: relative;" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">
                     <div class="logo layer2">
                         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"
                             preserveAspectRatio="xMidYMid meet" viewBox="0 0 640 640" width="25vh" height="25vh"
@@ -106,7 +106,7 @@
         <div class="arrow">
             <svg viewBox="0 0 24 24" width="100%" height="100%" stroke="#ffffffaa" stroke-width="2" fill="none"
                 stroke-linecap="round" stroke-linejoin="round" data-aos="fade-up" data-aos-duration="1000"
-                data-aos-delay="200">
+                data-aos-delay="1000">
                 <polyline points="7 13 12 18 17 13"></polyline>
                 <polyline points="7 6 12 11 17 6"></polyline>
             </svg>
