--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
-<app-home name="Home"></app-home>
-<div class="content">
-    <app-citation></app-citation>
-    <app-dummy name="Dummy 1"></app-dummy>
-    <app-dummy name="Dummy 2"></app-dummy>
+<div>
+    <app-home name="Home"></app-home>
+    <div class="content">
+        <app-citation></app-citation>
+        <app-dummy name="Dummy 1"></app-dummy>
+        <app-dummy name="Dummy 2"></app-dummy>
+    </div>
+    <app-menu></app-menu>
 </div>
-<app-menu></app-menu>
