make some noize !!!!!!

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div>
     <app-home name="Home"></app-home>
     <div class="content">
+        <app-ourjob></app-ourjob>
         <app-citation></app-citation>
         <app-dummy name="Dummy 1"></app-dummy>
         <app-dummy name="Dummy 2"></app-dummy>
