--- a/src/app/ourjob/ourjob.component.html
+++ b/src/app/ourjob/ourjob.component.html
@@ -1,3 +1,39 @@
 <div [id]="this.htmlId" class="main-container">
-    <p>ourjob works!</p>
+    <h1 class="main-title">
+        <b data-aos="fade-right" data-aos-duration="1500" data-aos-delay="400">-
+        </b>
+        <b data-aos="fade-up" data-aos-duration="1000"><i>Our
+            </i><u>JOB</u></b>
+        <b data-aos="fade-left" data-aos-duration="1000" data-aos-delay="400">
+            -</b>
+    </h1>
+    <div class="cloud" data-type="parallax" data-depth="-0.1"></div>
+    <div class="bottom-left" data-aos="fade-right" data-aos-delay="600">
+        <div class="left"></div>
+    </div>
+    <div class="bottom-right" data-aos="fade-left" data-aos-delay="800">
+        <div class="right"></div>
+    </div>
+
+    <div class="content" data-type="parallax" data-depth="-0.1">
+        <div style="text-align: center; width: 100%; font-size: 1.5em">
+            <p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400">Not only will you discover the stories
+                of the city,
+            </p>
+            <p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500"> you will also learn about the names
+                that are given by the Liégeois to the locals monuments,
+            </p>
+            <p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600">
+                what they drink and when to drink them, wander in the hidden impasses in the old Liège and
+                experience a
+            </p>
+            <p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="700">
+                walk inside a palace. All the highlights of Liège will be covered,
+            </p>
+            <p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="800">and we'll share with you our</p>
+            <p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="900">perfect
+                spots to go for a drink and to have a meal.</p>
+        </div>
+
+    </div>
 </div>
