some beautiful things, like the management of the section on screen, or the new menu, and what else...

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,7 @@
     <div class="content">
         <app-ourjob></app-ourjob>
         <app-citation></app-citation>
-        <app-dummy name="Dummy 1"></app-dummy>
-        <app-dummy name="Dummy 2"></app-dummy>
+        <app-book></app-book>
     </div>
     <app-menu></app-menu>
 </div>
