--- a/src/app/book/book.component.scss
+++ b/src/app/book/book.component.scss
@@ -1,10 +1,9 @@
 .main-container {
     height: 100vh;
-    width: 100%;
     overflow: hidden;
     position: relative;
     text-align: center;
-    color: #686868;
+    color: 	#fff;
     font-family: 'Lexend Deca', sans-serif;
-    background: #a3cfb9
+    background: #383e3f
 }
