--- a/src/app/citation/citation.component.html
+++ b/src/app/citation/citation.component.html
@@ -1,4 +1,4 @@
-<div class="main-container" [id]="this.htmlId">
+<div class="main-container" [id]="this.htmlId" (scroll)="onscrollevent($event)">
     <h1 class="citation" data-aos="zoom-in-up" data-aos-duration="1000" data-aos-anchor-placement="center">Ceci est une
         citation</h1>
 </div>
