--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,7 +1,7 @@
 <header>
     <ul>
         <li *ngFor="let m of menus">
-            <a (click)="scrollTo(m.htmlId)">{{ m.name }}</a>
+            <a (click)="scrollTo(m.htmlId)" [style]="">{{ m.name }}</a>
         </li>
     </ul>
 </header>
