--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -10,6 +10,14 @@ li {
 }
 
 li a {
+    opacity : 0.5;
     display: block;
     padding: 0px 15px;
+    transition:all 0.3s ease;
+}
+
+
+li a:hover {
+    font-size: 1.1em;
+    opacity: 1;
 }
