--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,14 +6,10 @@ header {
     background-color: transparent;
 }
 
-header ul {
-    bottom: 15%;
-}
-
 header ul li{
     font-family: 'Lexend Deca', sans-serif;
-    font-size: 1.5em;
-    color: transparent,
+    color: transparent;
+    font-size: 1em;
 }
 
 header {
@@ -39,7 +35,11 @@ html:not([data-scroll='0']) {
         box-shadow: 0 0 .5em rgba(0, 0, 0, .5);
     }
 
-    header ul li{
+    header ul{
+        opacity: 1;
+    }
+
+    header ul li {
         font-size: 1em;
         color: #343434;
     }
