--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,7 +1,8 @@
 <header>
     <ul>
         <li *ngFor="let m of menus">
-            <a (click)="scrollTo(m.htmlId)" [style]="">{{ m.name }}</a>
+            <a (click)="scrollTo(m.htmlId)">{{ m.name }}</a>
+            <div *ngIf="m.isOnScreen" style="background: #35383966; height: 3px; width: 55%"></div>
         </li>
     </ul>
 </header>
