--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -93,7 +93,7 @@
             </div>
             <div class="layer layer4">
                 <div class="over-title">
-                    <p data-type="parallax" data-depth="0.75">
+                    <p data-type="parallax" data-depth="0.72">
                         <i data-aos="fade-up" data-aos-duration="1000">Discover </i>
                         <b data-aos="fade-up" data-aos-duration="1000">Liege </b>
                         <u data-aos="fade-up" data-aos-duration="1000">With nice buddies</u></p>
@@ -106,7 +106,7 @@
         <div class="arrow">
             <svg viewBox="0 0 24 24" width="100%" height="100%" stroke="#ffffffaa" stroke-width="2" fill="none"
                 stroke-linecap="round" stroke-linejoin="round" data-aos="fade-up" data-aos-duration="1000"
-                data-aos-delay="1000">
+                data-aos-delay="1000" (click)="onArrowClick()">
                 <polyline points="7 13 12 18 17 13"></polyline>
                 <polyline points="7 6 12 11 17 6"></polyline>
             </svg>
