--- a/src/app/ourjob/ourjob.component.scss
+++ b/src/app/ourjob/ourjob.component.scss
@@ -2,16 +2,25 @@
     height: 110vh;
     overflow: hidden;
     position: relative;
-    background: #919da2
+    background: #b3cad4
 }
 
-.content {
+.content-container {
     width: 100%;
-    top: 20%;
+    top: 15%;
     position: absolute;
     color: #313131;
     font-family: 'Lexend Deca', sans-serif;
     font-weight: bolder,
+}
+
+.content {
+    text-align: center; 
+    width: 100%;
+}
+
+.content p{
+    font-size: 1.5em
 }
 
 .cloud {
@@ -22,13 +31,14 @@
     background-clip: content-box; 
     background-repeat: no-repeat;
     top: 0%;
+    opacity: 0.6;
 }
 
 .main-title{
     text-align: center;
     color: #fff;
     font-family: 'Lexend Deca', sans-serif;
-    padding-top: 2%;
+    padding-top: 5%;
     font-size: 3em;
     text-shadow: 2px 2px 6px #313131;
 }
@@ -37,7 +47,7 @@
     position: absolute;
     bottom: 0%;
     left: 0%;
-    height: 70vh;
+    height: 100vh;
     width: 40%;
 }
 
@@ -55,7 +65,7 @@
     position: absolute;
     bottom: 0%;
     right: 0%;
-    height: 70vh;
+    height: 100vh;
     width: 40%;
 }
 
@@ -67,4 +77,14 @@
     background-position: bottom;
     background-clip: border-box;
     background-repeat: no-repeat;
+}
+
+
+.content p b{
+    color:#7a2e3b;
+    transition:all 0.1s ease;
+}
+
+.content p b:hover {
+    font-size: 2em;
 }
